@startuml
'https://plantuml.com/class-diagram

title US028 "As a Buyer, I want to get the list of items\non auction of a given publisher" - CD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

class getAuctionItemsByPublisherUI{}

class GetAuctionItemsByPublishingCompanyController {
-_iAuctionRepo : IAuctionRepo
+getAuctionItemsIdByPublishingCompany(publisherID : PublisherID) : List<ItemId>
}

Interface IAuctionRepo {
-_auctionList : List<AuctionId>
+getAuctionItemsIdByPublishingCompanyId(publisherId : PublisherId) : List<ItemId>
}

class MemoAuctionRepo {
-_auctionList : List<AuctionId>
}

class Auction {
+ isByPublisherId(publisherID : PublisherID) : boolean
+ getItemId(): ItemId
}

class Item {
+ isByPublisherId(publisherID : PublisherID) : boolean
}

class Publication {
+ isByPublisherId(publisherID : PublisherID) : boolean
}

class Publisher {
- publisherID : PublisherID
}

'--- Interactions ---'

getAuctionItemsByPublisherUI "1"..>"1" GetAuctionItemsByPublishingCompanyController: invokes
GetAuctionItemsByPublishingCompanyController "1"..> "1" IAuctionRepo : uses
MemoAuctionRepo "1" ..|> "1" IAuctionRepo: relies on
MemoAuctionRepo "1" --> "*" Auction : accesses
Auction "1" --> "1" Item : contains
Item "1" --> "1" Publication : has
Publication "1" --> "1" Publisher : has


@enduml